# family_center_installer

./: .gitignore  INSTALLER_SUMMARY.md  PROJECT_DOC.md  README 2.md  README.md  README_V-5.md  SETUP_GUIDE.md  enhanced_web_interface.py  env.example  install.sh  install_v-5.sh  requirements 2.txt  requirements.txt  run.sh  setup.sh  start_web_ui.py  sync_to_family_center.sh  test_install.sh  update_installer.sh  update_installer_with_vlc.sh  validate_installer.sh  validate_v-5.sh
config/: config.development.json  config.production.json
family_center_package/: .isort.cfg  README.md  VERSION  mypy.ini  project_notes.md  pyproject.toml  requirements.txt
family_center_package/config/: config.json  config.yaml
family_center_package/src/: main.py
family_center_package/src/config/: __init__.py  config.yaml  config_manager.py
family_center_package/src/core/: logging_config.py
family_center_package/src/modules/: photo_manager.py
family_center_package/src/services/: bank_nh_pavilion_parser.py  capitol_center_parser.py  complementary_color_service.py  download_queue.py  google_calendar.py  google_drive.py  ical_service.py  local_sync.py  scheduler.py  time_based_weighting.py  weather_service.py  web_config_ui.py  web_content_service.py  wmur_parser.py
family_center_package/src/slideshow/: __init__.py  core.py  pygame_slideshow.py  vlc_slideshow_engine.py
family_center_package/src/utils/: api_utils.py  config.py  date_utils.py  error_handling.py  security.py
src/: __init__.py  main.py
src/config/: README.md  config.yaml  config.yaml.backup  config_manager.py  environment.py  logging_config.py
src/core/: __init__.py  display.py  utils.py
src/services/: bank_nh_pavilion_parser.py  calendar_visualizer.py  music_hall_parser.py  red_river_parser.py  time_based_weighting.py  web_config_ui.py  web_content_service.py
src/slideshow/: pygame_slideshow.py
src/utils/: cache_utils.py  database_utils.py  email_utils.py  errors.py  file_utils.py  logging_utils.py  network.py  validation.py
